Fix GitHub issues: use toList and custom exception